--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,9 @@ img {
 
 .main-header {
   border-bottom: 1px solid #e7e9fc;
+   box-shadow: 0 2px 1px rgba(46, 47, 66, 0.08),
+              0 1px 1px rgba(46, 47, 66, 0.16),
+              0 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
     display: flex;
@@ -398,10 +401,16 @@ letter-spacing: 0.02em;
   display: flex;
   justify-content: start;
   align-items: center;
+  padding: 100px 0;
     background-color: #2E2F42;
 }
+.footer-container{
+  display: flex;
+  align-items: baseline;
+  gap: 120px;
+}
 .footer-logo {
-padding: 100px 156px;
+ padding: 0;
 }
 .title-end {
   font-family: 'Raleway', sans-serif;
