--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,9 @@ display: flex;
 align-items: center;
 gap: 40px;
 }
+.nav-item-link.current{
+  color: #404bbf;
+}
 .nav-item-link.current::after {
   content: "";
   position: absolute;
@@ -80,7 +83,7 @@ gap: 40px;
   bottom: -1px;
   width: 100%;
   height: 4px;
-  background-color: #4D5AE5;
+  background-color: #404bbf;
   border-radius: 2px;
 }
 .nav-item {
@@ -398,9 +401,6 @@ letter-spacing: 0.02em;
 /* #endregion main */
 /* #region footer */
 .footer {
-  display: flex;
-  justify-content: start;
-  align-items: center;
   padding: 100px 0;
     background-color: #2E2F42;
 }
@@ -411,6 +411,7 @@ letter-spacing: 0.02em;
 }
 .footer-logo {
  padding: 0;
+ margin: 0;
 }
 .title-end {
   font-family: 'Raleway', sans-serif;
@@ -439,5 +440,25 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #fff;
 margin-bottom: 16px;
+}
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-social-link {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #31d0aa;
 }
 /* #endregion footer */
