--- a/css/styles.css
+++ b/css/styles.css
@@ -311,15 +311,13 @@ color: #2E2F42;
   background-color: #4D5AE5;
   border-radius: 50%;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icons-link:hover,
 .social-icons-link:focus{
   background-color: #404BBF;
 }
 .social-icons-svg{
-  height: 16px;
-  width: 16px;
   fill: currentColor;
 }
 /* #endregion team */
@@ -365,10 +363,12 @@ gap:48px 24px;
 .portfolio-list-item:focus-within .portfolio-overlay {
   transform: translateY(0);
 }
-.portfolio-list-item:hover {
+.portfolio-list-item:hover,
+.portfolio-list-item:focus-within {
   box-shadow:
-    0 4px 4px rgba(46,47,66,0.08),
-    0 4px 8px rgba(46,47,66,0.16);
+    0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16),
+    0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-item-image{
