--- a/css/styles.css
+++ b/css/styles.css
@@ -310,8 +310,7 @@ color: #2E2F42;
   color: #f4f4fd;
   background-color: #4D5AE5;
   border-radius: 50%;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icons-link:hover,
 .social-icons-link:focus{
@@ -351,8 +350,8 @@ gap:48px 24px;
   padding: 40px 32px;
   display: flex;
   align-items: center;
-  background-color: rgba(77, 90, 229, 0.9);
-  color: #ffffff;
+   background-color: #4D5AE5;
+  color: #F4F4FD;  
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
